--- a/h1.md
+++ b/h1.md
@@ -1,1 +1,46 @@
+# x) Lue ja tiivistä
 
+## Run salt command locally ([lähde](https://terokarvinen.com/2021/salt-run-command-locally/))
+
+Saltia käytetään yleensä monen orjakoneen hallitsemiseen. Salt-komennon ajaminen lokaalisti on hyödyllistä esim. testaamisessa, koska tuloksen näkee heti. Tärkeimmät tilafunktiot saltissa:
+
+- `pkg.installed` - asentaa paketin, jos sitä ei jo ole
+- `file.managed` - luo tiedoston
+- `service-running` - käynnistää deamoneita
+- `user-present` - luo käyttäjiä
+- `cmd.run` - ajaa komentoja
+- `sys.state_doc` - näyttää ohjeet
+
+## Salt Quickstart – Salt Stack Master and Slave on Ubuntu Linux ([lähde](https://terokarvinen.com/2018/03/28/salt-quickstart-salt-stack-master-and-slave-on-ubuntu-linux/))
+
+Saltilla pystyy hallitsemaan jopa tuhansia orjakoneita riippumatta niiden sijainnista. Ainoastaan isäntäkoneen tulee olla julkisella palvelimella ja julkisen osoitteen takana.
+
+Saltin käyttämiseen tarvitsee tehdä seuraavaa:
+- Asentaa isännän, eli salt-master, ja sen mahdolliseen palomuuriin on tehtävä reiät portteihin 4505/tcp ja 4506/tcp
+- Asentaa orjan, eli salt-minion
+- Antaa orjalle nimi (id) hakemistossa /etc/salt/minion tai vaihtoehtoisesti mennä hostnamesta generoidulla id:llä
+- Potkaista orja-daemonia komennolla `sudo systemctl restart salt-minion.service`
+- Hyväksyä orjan avaimen isäntäkoneella `salt-key -A` -komennolla
+- Kokeilla saada vastausta orjalta komennolla `sudo salt '*' cmd.run 'whoami'`
+
+Orjia voi asentaa niin monta kun haluaa.
+
+
+## Raportin kirjoittaminen ([lähde](https://terokarvinen.com/2006/06/04/raportin-kirjoittaminen-4/))
+
+*(Käytin tässä Linux-palvelinkurssilla tuotettua tekstiäni, kopioitu suoraan [täältä](https://github.com/Claptrack/Linux-palvelimet/blob/main/h1.md#mikä-on-hyvä-raportti).)*
+
+### Mikä on hyvä raportti?
+
+- Toistettava. Raportin tulisi olla riittävän seikkaperäinen, jotta joku muu voi toistaa samat asiat samassa ympäristössä, tarvittaessa jopa samalla raudalla.
+- Täsmällinen ja helppolukuinen. Raportoi käyttämäsi komennot ja mitä missäkin vaiheessa tapahtui. Merkitse myös kellonajat. Kirjoita raportti aina imperfektissä ja huolellisella kielellä, julkaisukanava huomioiden.
+- Muista viittaukset. Jos käytät verkosta löytyviä ohjeita, lisää ne lähdeviitteisiin. Viittauksilla osoitat, että olet perehtynyt aiheeseen.
+
+
+# Lähteet
+
+Run Salt Command Locally, Karvinen T. 2021: https://terokarvinen.com/2021/salt-run-command-locally/
+
+Salt Quickstart – Salt Stack Master and Slave on Ubuntu Linux, Karvinen T. 2018: https://terokarvinen.com/2018/03/28/salt-quickstart-salt-stack-master-and-slave-on-ubuntu-linux/
+
+Raportin kirjoittaminen, Karvinen T. 2006: https://terokarvinen.com/2006/06/04/raportin-kirjoittaminen-4/
