--- a/h1.md
+++ b/h1.md
@@ -36,8 +36,29 @@ Orjia voi asentaa niin monta kun haluaa.
 - Täsmällinen ja helppolukuinen. Raportoi käyttämäsi komennot ja mitä missäkin vaiheessa tapahtui. Merkitse myös kellonajat. Kirjoita raportti aina imperfektissä ja huolellisella kielellä, julkaisukanava huomioiden.
 - Muista viittaukset. Jos käytät verkosta löytyviä ohjeita, lisää ne lähdeviitteisiin. Viittauksilla osoitat, että olet perehtynyt aiheeseen.
 
+# b) Asenna Salt (salt-minion) Linuxille (uuteen virtuaalikoneeseesi)
+
+Uusi virtuaalikoneeni pyörii Azuren pilviympäristössä. Käyttöjärjestelmänä toimii Debian 12-Bookworm.
+
+Saltin asennukseen käytin Teron ohjetta [tehtäväsivulla](https://terokarvinen.com/palvelinten-hallinta/#h1-viisikko). Komennoilla varmistin ensin että ladattava repository on luotettu, jonka jälkeen lisäsin repon sources-listaan.
+
+<img width="925" alt="image" src="https://github.com/user-attachments/assets/1e0ac8e6-94a1-4625-8c62-eea01a2170ae">
+<br></br>
+
+Tämän jälkeen asensin saltin komennoilla `sudo apt-get update && sudo apt-get -y install salt-minion`. Käytin tässä vaiheessa tehtävää apuna tätä [ohjetta](https://terokarvinen.com/2021/salt-run-command-locally/)
+
+Tarkistin asennuksen onnistumisen ja saltin version komennolla `sudo salt-call --version`
+
+<img width="360" alt="image" src="https://github.com/user-attachments/assets/c19ff88c-656b-45df-8b6e-7f5f96fc090a">
+<br></br>
+
+
+
+
 
 # Lähteet
+
+Tehtävänanto: https://terokarvinen.com/palvelinten-hallinta/#h1-viisikko
 
 Run Salt Command Locally, Karvinen T. 2021: https://terokarvinen.com/2021/salt-run-command-locally/
 
