--- a/h1.md
+++ b/h1.md
@@ -1,4 +1,4 @@
-# x) Lue ja tiivistä
+<img width="923" alt="image" src="https://github.com/user-attachments/assets/f1088ab7-dba1-4d3e-9b00-8d83744973cb"># x) Lue ja tiivistä
 
 ## Run salt command locally ([lähde](https://terokarvinen.com/2021/salt-run-command-locally/))
 
@@ -52,8 +52,78 @@ Tarkistin asennuksen onnistumisen ja saltin version komennolla `sudo salt-call -
 <img width="360" alt="image" src="https://github.com/user-attachments/assets/c19ff88c-656b-45df-8b6e-7f5f96fc090a">
 <br></br>
 
+Vaihdoin sen jälkeen masterin osoitteeksi "localhost" tiedostossa /etc/salt/minion
 
+<img width="378" alt="image" src="https://github.com/user-attachments/assets/99742851-0078-44af-a481-36a45ad2775c">
+<br></br>
 
+<img width="581" alt="image" src="https://github.com/user-attachments/assets/21e867a8-efe1-4701-8f36-b31b3a653a1d">
+<br></br>
+
+# c) Viisi tärkeintä
+
+Käytin harjoituksen pohjana Teron [ohjetta](https://terokarvinen.com/2021/salt-run-command-locally/) salt-komennon paikallisesta käyttämisestä.
+
+## pkg.installed
+
+Ajoin saman esimerkkikomennon kuin Teron esimerkissä `sudo salt-call --local -l info state.single pkg.installed tree`.
+
+<img width="622" alt="image" src="https://github.com/user-attachments/assets/531e6dce-6cd1-4415-906a-a3e731e15c41">
+<br></br>
+
+Suuri osa tuloksista näyttivät aika itsestään selviltä, joten avasin ainoastaan mielestäni oleellisimmat alla.
+
+Seuraavasta kohdasta näin, että tree ei ollut asennettuna:
+
+<img width="310" alt="image" src="https://github.com/user-attachments/assets/8a4df1d7-4268-457e-89b3-1b7f1efb2e66">
+<br></br>
+
+Sen lisäksi näin, että yksi muutos tehtiin:
+
+<img width="188" alt="image" src="https://github.com/user-attachments/assets/981ee39e-8737-41a1-bc2c-5d1bbd3a6716">
+<br></br>
+
+Kun kokeilin ajaa komennon uudestaan, sain seuraavan tuloksen:
+
+<img width="620" alt="image" src="https://github.com/user-attachments/assets/91019e0c-04d1-4169-b262-e4dcdce0707d">
+<br></br>
+
+Siitä näkee, että ohjelma on jo asennettu ja että tapahtuma oli onnistunut, mutta mitään muutoksia ei tehty.
+
+## file.managed
+
+Ajoin komennon Teron esimerkistä pienin muutoksin `sudo salt-call --local -l info state.single file.managed /tmp/testing`
+
+Tuloksesta näen, että uusi tiedosto luotiin:
+
+<img width="923" alt="image" src="https://github.com/user-attachments/assets/5255ba0a-d378-49e2-b720-c02970eac329">
+<br></br>
+
+Nyt kun ajan komennot paikallisesti, eli koneeni on sekä isäntä että orja, pystyin näkemään tiedoston komennolla `ls /tmp`.
+
+Kokeilin ajaa komennon uudestaan, jolloin sain ilmoituksen, että tiedosto on jo olemassa ja että mitään muutoksia ei tehty.
+
+<img width="925" alt="image" src="https://github.com/user-attachments/assets/a0f8cce8-e8ee-4c33-ac1c-cd950685c460">
+<br></br>
+
+Ajoin seuraavaksi komennon `sudo salt-call --local -l info state.single file.managed /tmp/tetsausta contents="foo"`, jossa loin uuden tiedoston sisällöllä "foo".
+
+Tuloksissa oli se ero edelliseen, että "new" sijaan muutoksissa luki "diff: New file":
+
+<img width="807" alt="image" src="https://github.com/user-attachments/assets/247489fd-6084-4f9c-928d-af37fafec279">
+<br></br>
+
+<img width="331" alt="image" src="https://github.com/user-attachments/assets/8eb2afed-3624-4ba8-9391-0e370578bb96">
+<br></br>
+
+Kokeilin myös seuraavaa komentoa `sudo salt-call --local -l info state.single file.absent /tmp/moimathias`. Pienen tutkiskelun jälkeen päättelin, että kyseisellä komennolla varmistetaan tiedoston olevan "poissaoleva", eli poistettu (lähde: https://docs.saltproject.io/en/latest/ref/states/all/salt.states.file.html#salt.states.file.absent). Jos tiedosto kuitenkin löytyy, se poistetaan.
+
+Tuloksesta näin, että tiedostoa ei ollut ja näin ollen, muutoksia ei ole:
+
+<img width="702" alt="image" src="https://github.com/user-attachments/assets/b88e055f-cee7-44f8-a626-a3f4f027d330">
+<br></br>
+
+## service.running
 
 
 # Lähteet
@@ -65,3 +135,5 @@ Run Salt Command Locally, Karvinen T. 2021: https://terokarvinen.com/2021/salt-r
 Salt Quickstart – Salt Stack Master and Slave on Ubuntu Linux, Karvinen T. 2018: https://terokarvinen.com/2018/03/28/salt-quickstart-salt-stack-master-and-slave-on-ubuntu-linux/
 
 Raportin kirjoittaminen, Karvinen T. 2006: https://terokarvinen.com/2006/06/04/raportin-kirjoittaminen-4/
+
+Salt project, salt.states.file: https://docs.saltproject.io/en/latest/ref/states/all/salt.states.file.html#salt.states.file.absent
