--- a/h1.md
+++ b/h1.md
@@ -1,6 +1,8 @@
-<img width="923" alt="image" src="https://github.com/user-attachments/assets/f1088ab7-dba1-4d3e-9b00-8d83744973cb"># x) Lue ja tiivistä
+# h1 Viisikko
 
-## Run salt command locally ([lähde](https://terokarvinen.com/2021/salt-run-command-locally/))
+## x) Lue ja tiivistä
+
+### Run salt command locally ([lähde](https://terokarvinen.com/2021/salt-run-command-locally/))
 
 Saltia käytetään yleensä monen orjakoneen hallitsemiseen. Salt-komennon ajaminen lokaalisti on hyödyllistä esim. testaamisessa, koska tuloksen näkee heti. Tärkeimmät tilafunktiot saltissa:
 
@@ -11,7 +13,7 @@ Saltia käytetään yleensä monen orjakoneen hallitsemiseen. Salt-komennon ajam
 - `cmd.run` - ajaa komentoja
 - `sys.state_doc` - näyttää ohjeet
 
-## Salt Quickstart – Salt Stack Master and Slave on Ubuntu Linux ([lähde](https://terokarvinen.com/2018/03/28/salt-quickstart-salt-stack-master-and-slave-on-ubuntu-linux/))
+### Salt Quickstart – Salt Stack Master and Slave on Ubuntu Linux ([lähde](https://terokarvinen.com/2018/03/28/salt-quickstart-salt-stack-master-and-slave-on-ubuntu-linux/))
 
 Saltilla pystyy hallitsemaan jopa tuhansia orjakoneita riippumatta niiden sijainnista. Ainoastaan isäntäkoneen tulee olla julkisella palvelimella ja julkisen osoitteen takana.
 
@@ -36,7 +38,7 @@ Orjia voi asentaa niin monta kun haluaa.
 - Täsmällinen ja helppolukuinen. Raportoi käyttämäsi komennot ja mitä missäkin vaiheessa tapahtui. Merkitse myös kellonajat. Kirjoita raportti aina imperfektissä ja huolellisella kielellä, julkaisukanava huomioiden.
 - Muista viittaukset. Jos käytät verkosta löytyviä ohjeita, lisää ne lähdeviitteisiin. Viittauksilla osoitat, että olet perehtynyt aiheeseen.
 
-# b) Asenna Salt (salt-minion) Linuxille (uuteen virtuaalikoneeseesi)
+## b) Asenna Salt (salt-minion) Linuxille (uuteen virtuaalikoneeseesi)
 
 Uusi virtuaalikoneeni pyörii Azuren pilviympäristössä. Käyttöjärjestelmänä toimii Debian 12-Bookworm.
 
@@ -60,11 +62,11 @@ Vaihdoin sen jälkeen masterin osoitteeksi "localhost" tiedostossa /etc/salt/min
 <img width="581" alt="image" src="https://github.com/user-attachments/assets/21e867a8-efe1-4701-8f36-b31b3a653a1d">
 <br></br>
 
-# c) Viisi tärkeintä
+## c) Viisi tärkeintä
 
 Käytin harjoituksen pohjana Teron [ohjetta](https://terokarvinen.com/2021/salt-run-command-locally/) salt-komennon paikallisesta käyttämisestä.
 
-## pkg.installed
+### pkg.installed
 
 Ajoin saman esimerkkikomennon kuin Teron esimerkissä `sudo salt-call --local -l info state.single pkg.installed tree`.
 
@@ -90,7 +92,7 @@ Kun kokeilin ajaa komennon uudestaan, sain seuraavan tuloksen:
 
 Siitä näkee, että ohjelma on jo asennettu ja että tapahtuma oli onnistunut, mutta mitään muutoksia ei tehty.
 
-## file.managed
+### file.managed
 
 Ajoin komennon Teron esimerkistä pienin muutoksin `sudo salt-call --local -l info state.single file.managed /tmp/testing`
 
@@ -123,7 +125,7 @@ Tuloksesta näin, että tiedostoa ei ollut ja näin ollen, muutoksia ei ole:
 <img width="702" alt="image" src="https://github.com/user-attachments/assets/b88e055f-cee7-44f8-a626-a3f4f027d330">
 <br></br>
 
-## service.running
+### service.running
 
 
 # Lähteet
