--- a/h1.md
+++ b/h1.md
@@ -12,6 +12,7 @@ Saltia käytetään yleensä monen orjakoneen hallitsemiseen. Salt-komennon ajam
 - `user-present` - luo käyttäjiä
 - `cmd.run` - ajaa komentoja
 - `sys.state_doc` - näyttää ohjeet
+<br></br>
 
 ### Salt Quickstart – Salt Stack Master and Slave on Ubuntu Linux ([lähde](https://terokarvinen.com/2018/03/28/salt-quickstart-salt-stack-master-and-slave-on-ubuntu-linux/))
 
@@ -26,17 +27,17 @@ Saltin käyttämiseen tarvitsee tehdä seuraavaa:
 - Kokeilla saada vastausta orjalta komennolla `sudo salt '*' cmd.run 'whoami'`
 
 Orjia voi asentaa niin monta kun haluaa.
-
-
+<br></br>
 ## Raportin kirjoittaminen ([lähde](https://terokarvinen.com/2006/06/04/raportin-kirjoittaminen-4/))
 
-*(Käytin tässä Linux-palvelinkurssilla tuotettua tekstiäni, kopioitu suoraan [täältä](https://github.com/Claptrack/Linux-palvelimet/blob/main/h1.md#mikä-on-hyvä-raportti).)*
+*(Käytin tässä Linux-palvelinkurssilla tuotettua tekstiäni, kopioitu suoraan [täältä](https://github.com/Claptrack/Linux-palvelimet/blob/main/h1.md#mikä-on-hyvä-raportti))*
 
 ### Mikä on hyvä raportti?
 
 - Toistettava. Raportin tulisi olla riittävän seikkaperäinen, jotta joku muu voi toistaa samat asiat samassa ympäristössä, tarvittaessa jopa samalla raudalla.
 - Täsmällinen ja helppolukuinen. Raportoi käyttämäsi komennot ja mitä missäkin vaiheessa tapahtui. Merkitse myös kellonajat. Kirjoita raportti aina imperfektissä ja huolellisella kielellä, julkaisukanava huomioiden.
 - Muista viittaukset. Jos käytät verkosta löytyviä ohjeita, lisää ne lähdeviitteisiin. Viittauksilla osoitat, että olet perehtynyt aiheeseen.
+<br></br>
 
 ## b) Asenna Salt (salt-minion) Linuxille (uuteen virtuaalikoneeseesi)
 
@@ -47,7 +48,7 @@ Saltin asennukseen käytin Teron ohjetta [tehtäväsivulla](https://terokarvinen
 <img width="925" alt="image" src="https://github.com/user-attachments/assets/1e0ac8e6-94a1-4625-8c62-eea01a2170ae">
 <br></br>
 
-Tämän jälkeen asensin saltin komennoilla `sudo apt-get update && sudo apt-get -y install salt-minion`. Käytin tässä vaiheessa tehtävää apuna tätä [ohjetta](https://terokarvinen.com/2021/salt-run-command-locally/)
+Tämän jälkeen asensin salt-minionin komennoilla `sudo apt-get update && sudo apt-get -y install salt-minion`. Käytin tässä vaiheessa tehtävää apuna tätä [ohjetta](https://terokarvinen.com/2021/salt-run-command-locally/).
 
 Tarkistin asennuksen onnistumisen ja saltin version komennolla `sudo salt-call --version`
 
@@ -62,13 +63,30 @@ Vaihdoin sen jälkeen masterin osoitteeksi "localhost" tiedostossa /etc/salt/min
 <img width="581" alt="image" src="https://github.com/user-attachments/assets/21e867a8-efe1-4701-8f36-b31b3a653a1d">
 <br></br>
 
+Mikäli olin käsittänyt oikein tehtävänannon, niin tässä vaiheessa koneelle ei asennettu isäntää, vaan pelkkä orja, jota ohjattiin paikallisesti. Toisin sanoen virtuaalikone toimi orjana.
+<br></br>
+
 ## c) Viisi tärkeintä
 
-Käytin harjoituksen pohjana Teron [ohjetta](https://terokarvinen.com/2021/salt-run-command-locally/) salt-komennon paikallisesta käyttämisestä.
+Käytin harjoituksen pohjana Teron [ohjetta](https://terokarvinen.com/2021/salt-run-command-locally/) salt-call-komennon käyttämisestä paikallisesti. 
+<br></br>
 
 ### pkg.installed
 
 Ajoin saman esimerkkikomennon kuin Teron esimerkissä `sudo salt-call --local -l info state.single pkg.installed tree`.
+
+Ymmärtääkseni mitä kaikkea komento tekee, laitoin komennon sellaisenaan chatGPT:hen.
+
+`sudo salt-call` ajaa salt-komentoja paikallisesti
+
+` --local` kertoo, että halutaan ajaa komento ilman isäntäkonetta
+
+`-l info` näyttää jokaisen toiminnon tulokset yksityiskohtaisena listana
+
+`state.single` kertoo, että komento halutaan ajaa ilman state-tiedostoa suoraan komentoriviltä
+
+`pkg.installed tree` varmistaa, että paketti 'tree' on asennettuna
+<br></br>
 
 <img width="622" alt="image" src="https://github.com/user-attachments/assets/531e6dce-6cd1-4415-906a-a3e731e15c41">
 <br></br>
@@ -91,6 +109,7 @@ Kun kokeilin ajaa komennon uudestaan, sain seuraavan tuloksen:
 <br></br>
 
 Siitä näkee, että ohjelma on jo asennettu ja että tapahtuma oli onnistunut, mutta mitään muutoksia ei tehty.
+<br></br>
 
 ### file.managed
 
@@ -100,8 +119,6 @@ Tuloksesta näen, että uusi tiedosto luotiin:
 
 <img width="923" alt="image" src="https://github.com/user-attachments/assets/5255ba0a-d378-49e2-b720-c02970eac329">
 <br></br>
-
-Nyt kun ajan komennot paikallisesti, eli koneeni on sekä isäntä että orja, pystyin näkemään tiedoston komennolla `ls /tmp`.
 
 Kokeilin ajaa komennon uudestaan, jolloin sain ilmoituksen, että tiedosto on jo olemassa ja että mitään muutoksia ei tehty.
 
@@ -127,6 +144,75 @@ Tuloksesta näin, että tiedostoa ei ollut ja näin ollen, muutoksia ei ole:
 
 ### service.running
 
+Kokeilin Teron esimerkkikomentoa apachen potkimiseksi `sudo salt-call --local -l info state.single service.running apache2 enable=True`. Apache ei kuitenkaan ollut asennettuna, joten vastaus oli odotettu.
+
+<img width="738" alt="image" src="https://github.com/user-attachments/assets/345c2bef-a554-496f-9559-321c3a39e961">
+<br></br>
+
+Kokeilin potkaista käyntiin ufw:n (palomuurin), koska sen olin asentanut jo aiemmin.
+
+<img width="710" alt="image" src="https://github.com/user-attachments/assets/b1c51b99-484e-4331-ad0e-09fa72079c4a">
+<br></br>
+
+Tässä tuloksessa näkyy, että ufw oli jo käynnissä, mutta muutoksia kuitenkin tehtiin. Kysyin jälleen chatGPT:llä komennon `enable=True` funktiosta ja selvisi, että se asettaa ufw:n käynnistymään automaattisesti käynnistyksen yhteydessä, joten päättelin muutoksen koskevan tätä. Ajamalla komennon uudestaan, sain vastauksen, että muutoksia ei tehty.
+
+<img width="707" alt="image" src="https://github.com/user-attachments/assets/8e71e0a6-ee73-440b-b5f2-d1bfb5d308b7">
+<br></br>
+
+### user.present
+
+Ajoin komennon `sudo salt-call --local -l info state.single user.present mathias01` varmistaakseni, että käyttäjä mathias01 löytyy koneelta. Vastauksessa luki, että käyttäjä on luotu.
+
+<img width="923" alt="image" src="https://github.com/user-attachments/assets/41a18887-f61b-4df2-af15-02f54235da4c">
+<br></br>
+
+### cmd.run
+
+Kokeilin taas Teron esimerkissä löytyvää komentoa `sudo salt-call --local -l info state.single cmd.run 'touch /tmp/foo' creates="/tmp/foo"` kun olin tutkinut chatGPT:llä, mitä kaikkea komento tekee.
+
+`'touch /tmp/foo'` luo tiedoston 'foo' ainoastaan, jos tiedostoa ei jo ole olemassa. Jos tiedosto on olemassa, tiedoston aikaleimat avaamisen ja muokkaamisen osalta nykyhetkeen
+
+`creates="/tmp/foo"` tulee edellisen komennon lisäksi varmistamaan, että tiedosto luodaan ainoastaan, mikäli sitä ei ennestään ole. Tämä tekee komennosta **idempotentin**.
+
+Tuloksesta nähdään, että tiedosto luotiin.
+
+<img width="791" alt="image" src="https://github.com/user-attachments/assets/61cd1375-f6ea-4535-a183-bf4b447ac2df">
+<br></br>
+
+Kun ajoin komennon uudestaan sain ilmoituksen, että mikään ei muuttunut.
+
+<img width="795" alt="image" src="https://github.com/user-attachments/assets/6c99d071-739c-40bf-ad51-6c6295c9290e">
+<br></br>
+
+Tässä herää kysymys, että eikö kaikki aiemmatkin ajamani komennot ole lähtökohtaisesti idempotentteja? Mitään muutoksia ei tehdä, jos ei ole tarvetta.
+
+## d) Idempotentti
+
+Aiempien testieni esimerkeissä näkee, että kun komento ajetaan ensimmäistä kertaa (esim. käyttäjän lisääminen), muutos tehdään. Mutta jos komento ajetaan uudestaan, toiminto onnistuu, mutta mitään muutoksia ei tehdä koska sille ei ole tarvetta. Esimerkissä, jossa ajoin cmd.run-komennon on kuitenkin erillinen komento varmistamassa, että toimintoa ei tehdä, mikäli tiedosto on jo olemassa. Tällä kai halutaan varmistaa, että tiedostoa ei yliajeta, vaan pelkästään päivitetään aikaleimat.
+<br></br>
+
+## e) Herra-orja
+
+Aiemmissa testeissä ajoin kaikki komennot suoraan orjakoneella paikallisesti ilman isäntäkonetta. Tässä esimerkisssä yritän saada isäntäkoneen ja orjakoneen toimimaan samalla koneella.
+
+Käytin lähteenä Teron [ohjetta](https://terokarvinen.com/2018/03/28/salt-quickstart-salt-stack-master-and-slave-on-ubuntu-linux/)
+
+Lähdin asentamaan virtuaalikoneelleni isäntää komennoilla `sudo apt-get update && sudo apt-get -y install salt-master`. Lisäsin sen jälkeen tulimuuriin säännön sallia yhteydet porteilta 4505/tcp ja 4506/tcp. Tämän jälkeen tarkistin komennolla `hostname -I` masterin IP-osoitteen ja lisäsin sen tiedostoon /etc/salt/minion. Tehtävänannon vinkeissä todettiin, että masterin osoitteena voi myös käyttää 'localhost', joten katsotaan toimiiko myös näin, kun isäntä ja orja ovat samalla koneella.
+
+<img width="605" alt="image" src="https://github.com/user-attachments/assets/0d91bd11-a80c-4fee-afd9-1aadc4279074">
+<br></br>
+
+Tämän jälkeen potkaisin orja-daemonia komennolla `sudo systemctl restart salt-minion.service`.
+
+Ohjeen mukaan siirryin hyväksymään kaikki "odottavat" orjakoneen avaimet isäntäkoneella komennolla `sudo salt-key -A`. Käytin tässä taas apuna chatGPT:tä kirjoittamalla komennon sellaisenaan.
+
+`salt-key -A` siis hyväksyy kaikki odottavat avaimet orjakoneilta ilman erillistä vahvistusta.
+
+Vastauksena sain "The key glob '*' does not match any unaccepted keys.". Ohjeessa todettiin, että tätä virhettä ei tarvitse huomioida. Komennolla `salt-key -L` listasin kaikki avaimet, ja vastauksena sain, että avaimia ei ole. Epäilen tämä liittyvän siihen, että isäntä ja orja toimii samalla koneella.
+
+Yritin seuraavaksi saada yhteyden minioniin komennolla `sudo salt '*' cmd.run 'whoami'`, mutta sain vastaukseksi "No minions matched the target. No command was sent, no jid was assigned.
+ERROR: No return received". Kokeilin vaihtaa masterin osoitteeksi 'localhost', käynnistin deamonin uusiksi, mutta silti sama vastaus. Nähdäkseni olin tehnyt kaikki stepit, mitä Teron ohjeissa oli. Sammutin myös kaikki tulimuurit varmuuden vuoksi, mutta sekään ei auttanut. Katsotaan, ehditäänkö käydä tapaus läpi tunnilla.
+<br></br>
 
 # Lähteet
 
@@ -139,3 +225,5 @@ Salt Quickstart – Salt Stack Master and Slave on Ubuntu Linux, Karvinen T. 201
 Raportin kirjoittaminen, Karvinen T. 2006: https://terokarvinen.com/2006/06/04/raportin-kirjoittaminen-4/
 
 Salt project, salt.states.file: https://docs.saltproject.io/en/latest/ref/states/all/salt.states.file.html#salt.states.file.absent
+
+chatGPT, prompt: Teron ohjeissa käytetyt komennot. (Tässä harjoituksessa näin chatGPT:n käyttämisen järkevänä ja aikaa säästävänä, kun halusin ymmärtää eri komentoja. Mielestäni riskitöntä, kun ei kysy vinkkejä tmv.)
