--- a/h1.md
+++ b/h1.md
@@ -214,6 +214,16 @@ Yritin seuraavaksi saada yhteyden minioniin komennolla `sudo salt '*' cmd.run 'w
 ERROR: No return received". Kokeilin vaihtaa masterin osoitteeksi 'localhost', käynnistin deamonin uusiksi, mutta silti sama vastaus. Nähdäkseni olin tehnyt kaikki stepit, mitä Teron ohjeissa oli. Sammutin myös kaikki tulimuurit varmuuden vuoksi, mutta sekään ei auttanut. Katsotaan, ehditäänkö käydä tapaus läpi tunnilla.
 <br></br>
 
+***edit 30.10.2024 klo 14.24: Lukiessani muiden raportteja tehtävästä tajusin, että /etc/salt/minion -tiedostossa oli jäänyt 'master: localhost' kommentiksi, joten poistin risuaidan, tallensin tiedoston, käynnistin minion-daemonin uudelleen, jonka jälkeen homma rokkasi. Hyväksyin avaimen ja kokeilin yhteyttä `sudo salt '*' cmd.run 'whoami'`***
+
+<img width="391" alt="image" src="https://github.com/user-attachments/assets/ff03eb88-cd2c-482c-9a5c-c812c6d8009e">
+<br></br>
+
+Kokeilin vielä ajaa komennon `sudo salt '*' cmd.run 'hostname -I'`
+
+<img width="435" alt="image" src="https://github.com/user-attachments/assets/34599a9b-1dd9-4576-92a0-a787dabf09e3">
+<br></br>
+
 # Lähteet
 
 Tehtävänanto: https://terokarvinen.com/palvelinten-hallinta/#h1-viisikko
