--- a/h1.md
+++ b/h1.md
@@ -8,8 +8,8 @@ Saltia käytetään yleensä monen orjakoneen hallitsemiseen. Salt-komennon ajam
 
 - `pkg.installed` - asentaa paketin, jos sitä ei jo ole
 - `file.managed` - luo tiedoston
-- `service-running` - käynnistää deamoneita
-- `user-present` - luo käyttäjiä
+- `service.running` - käynnistää deamoneita
+- `user.present` - luo käyttäjiä
 - `cmd.run` - ajaa komentoja
 - `sys.state_doc` - näyttää ohjeet
 <br></br>
