--- a/h2.md
+++ b/h2.md
@@ -1,1 +1,12 @@
+# h2 Infra-as-code
 
+## x) Lue ja tiivistä
+
+### [Two Machine Virtual Network With Debian 11 Bullseye and Vagrant](https://terokarvinen.com/2021/two-machine-virtual-network-with-debian-11-bullseye-and-vagrant/) (Karvinen, 2021)
+
+Vagrantin avulla saa automaattisesti pystytettyä useampia virtuaalikoneita. Vagrant myös automatisoi SSH-kirjautumisen. Graafista käyttöliittymää ei tarvita.
+
+Vagrantin asennuksen jälkeen luodaan kansio projektille, johon luodaan "Vagrantfile", joka toimii virtuaalikoneiden konffitiedostona. Tiedostoon lisätään tiedot virtuaalikoneiden määrästä, niiden nimistä, kotihakemistojen sijainnista sekä ip-osoitteista. Tämän jälkeen virtuaalikoneisiin voidaan ottaa yhteys ssh:lla. Kun virtuaalikoneita ei enää tarvitse, voi ne tuhota `vagrant destroy`-komennolla.
+
+
+<br></br>
