--- a/h2.md
+++ b/h2.md
@@ -6,7 +6,39 @@
 
 Vagrantin avulla saa automaattisesti pystytettyä useampia virtuaalikoneita. Vagrant myös automatisoi SSH-kirjautumisen. Graafista käyttöliittymää ei tarvita.
 
-Vagrantin asennuksen jälkeen luodaan kansio projektille, johon luodaan "Vagrantfile", joka toimii virtuaalikoneiden konffitiedostona. Tiedostoon lisätään tiedot virtuaalikoneiden määrästä, niiden nimistä, kotihakemistojen sijainnista sekä ip-osoitteista. Tämän jälkeen virtuaalikoneisiin voidaan ottaa yhteys ssh:lla. Kun virtuaalikoneita ei enää tarvitse, voi ne tuhota `vagrant destroy`-komennolla.
+Vagrantin asennuksen jälkeen luodaan kansio projektille, johon luodaan tiedosto "Vagrantfile", joka toimii virtuaalikoneiden konffitiedostona. Tiedostoon lisätään tiedot virtuaalikoneiden määrästä, niiden nimistä, kotihakemistojen sijainnista sekä ip-osoitteista. Tämän jälkeen virtuaalikoneisiin voidaan ottaa yhteys ssh:lla. Kun virtuaalikoneita ei enää tarvitse, voi ne tuhota `vagrant destroy`-komennolla.
+<br></br>
+
+### [Salt Quickstart – Salt Stack Master and Slave on Ubuntu Linux](https://terokarvinen.com/2018/salt-quickstart-salt-stack-master-and-slave-on-ubuntu-linux/?fromSearch=salt%20quickstart%20salt%20stack%20master%20and%20slave%20on%20ubuntu%20linux) (Karvinen, 2018)
+
+*Käytän tässä edellistä raporttiani, jossa tiivistin saman artikkelin ([lähde](https://github.com/Claptrack/Palvelinten-hallinta/blob/main/h1.md#salt-quickstart--salt-stack-master-and-slave-on-ubuntu-linux-lähde))*
+
+Saltilla pystyy hallitsemaan jopa tuhansia orjakoneita riippumatta niiden sijainnista. Ainoastaan isäntäkoneen tulee olla julkisella palvelimella ja julkisen osoitteen takana.
+
+Saltin käyttämiseen tarvitsee tehdä seuraavaa:
+- Asentaa isännän, eli salt-master, ja sen mahdolliseen palomuuriin on tehtävä reiät portteihin 4505/tcp ja 4506/tcp
+- Asentaa orjan, eli salt-minion
+- Antaa orjalle nimi (id) hakemistossa /etc/salt/minion tai vaihtoehtoisesti mennä hostnamesta generoidulla id:llä
+- Potkaista orja-daemonia komennolla `sudo systemctl restart salt-minion.service`
+- Hyväksyä orjan avaimen isäntäkoneella `salt-key -A` -komennolla
+- Kokeilla saada vastausta orjalta komennolla `sudo salt '*' cmd.run 'whoami'`
+
+Orjia voi asentaa niin monta kun haluaa.
+<br></br>
+
+### Karvinen 2014: [Hello Salt Infra-as-Code](https://terokarvinen.com/2024/hello-salt-infra-as-code/)
+
+Saltin moduuleilla suoritetaan toimintoja orjakoneilla. Moduuli
 
 
 <br></br>
+
+# Lähteet
+
+Tehtävänanto: https://terokarvinen.com/palvelinten-hallinta/#h2-infra-as-code
+
+Karvinen 2021: [Two Machine Virtual Network With Debian 11 Bullseye and Vagrant](https://terokarvinen.com/2021/two-machine-virtual-network-with-debian-11-bullseye-and-vagrant/)
+
+Karvinen 2018: [Salt Quickstart – Salt Stack Master and Slave on Ubuntu Linux](https://terokarvinen.com/2018/salt-quickstart-salt-stack-master-and-slave-on-ubuntu-linux/?fromSearch=salt%20quickstart%20salt%20stack%20master%20and%20slave%20on%20ubuntu%20linux)
+
+Edellinen raporttini, jota käytin lähteenä yhteenvedossa Saltin asennuksesta (Suontaa, 2024): https://github.com/Claptrack/Palvelinten-hallinta/blob/main/h1.md#salt-quickstart--salt-stack-master-and-slave-on-ubuntu-linux-lähde
