--- a/h2.md
+++ b/h2.md
@@ -6,7 +6,7 @@
 
 Vagrantin avulla saa automaattisesti pystytettyä useampia virtuaalikoneita. Vagrant myös automatisoi SSH-kirjautumisen. Graafista käyttöliittymää ei tarvita.
 
-Vagrantin asennuksen jälkeen luodaan kansio projektille, johon luodaan tiedosto "Vagrantfile", joka toimii virtuaalikoneiden konffitiedostona. Tiedostoon lisätään tiedot virtuaalikoneiden määrästä, niiden nimistä, kotihakemistojen sijainnista sekä ip-osoitteista. Tämän jälkeen virtuaalikoneisiin voidaan ottaa yhteys ssh:lla. Kun virtuaalikoneita ei enää tarvitse, voi ne tuhota `vagrant destroy`-komennolla.
+Vagrantin asennuksen jälkeen luodaan kansio projektille, johon luodaan tiedosto `Vagrantfile`, joka toimii virtuaalikoneiden konffitiedostona. Tiedostoon lisätään tiedot virtuaalikoneiden määrästä, niiden nimistä, kotihakemistojen sijainnista sekä ip-osoitteista. Tämän jälkeen virtuaalikoneisiin voidaan ottaa yhteys ssh:lla. Kun virtuaalikoneita ei enää tarvitse, voi ne tuhota `vagrant destroy`-komennolla.
 <br></br>
 
 ### [Salt Quickstart – Salt Stack Master and Slave on Ubuntu Linux](https://terokarvinen.com/2018/salt-quickstart-salt-stack-master-and-slave-on-ubuntu-linux/?fromSearch=salt%20quickstart%20salt%20stack%20master%20and%20slave%20on%20ubuntu%20linux) (Karvinen, 2018)
@@ -26,12 +26,62 @@ Saltin käyttämiseen tarvitsee tehdä seuraavaa:
 Orjia voi asentaa niin monta kun haluaa.
 <br></br>
 
-### Karvinen 2014: [Hello Salt Infra-as-Code](https://terokarvinen.com/2024/hello-salt-infra-as-code/)
+### [Hello Salt Infra-as-Code](https://terokarvinen.com/2024/hello-salt-infra-as-code/) (Karvinen, 2024)
 
-Saltin moduuleilla suoritetaan toimintoja orjakoneilla. Moduuli
+Saltilla suoritetaan toimintoja orjakoneilla isäntäkoneesta käsin. Toiminnot ova moduuleja, joita lisätään isäntäkoneelle. Jokaiselle moduulille luodaan oma kansio `/srv/salt`-hakemistoon. Kansiot sisältävät kaiken tarvittavan, esim. koodit ja tiedostot, jota moduulin ajamiseen tarvitaan. Kun moduulia ajetaan, aloituspiste on `sls`-tiedosto, jonka tulee sijaita moduulin kansiossa.
 
+Artikkelissa olevassa esimerkissä lisättiin idempotentti komento `init.sls`-tiedostoon:
 
+    /tmp/hellotero:
+        file.managed
+
+Komennon tarkoitus on varmistaa, että tiedosto `hellotero` löytyy `/tmp`-hakemistosta. Mikäli sitä ei löydy, se luodaan. Idempotentti komento pitää huolen siitä, että mitään ei tehdä, jos haluttu lopputulema (tiedoston luonti) on jo saavutettu.
+
+Huomioitavaa on, että esimerkissä ajettiin salt-komentoja paikallisesti, eli moduuli suoritti muutoksen isäntäkoneelle. Komennolla `ls /tmp/hellotero` varmistettiin, että tiedosto oli luotu.
+
+Idempotenssia testataan ajamalla sama moduuli uudestaan jolloin nähdään, että moduuli on ajettu onnistuneesti, mutta mikään ei muutu ensimmäisen ajon jälkeen.
 <br></br>
+
+### [Salt Vagrant - automatically provision one master and two slaves](https://terokarvinen.com/2023/salt-vagrant/#infra-as-code---your-wishes-as-a-text-file) (Karvinen, 2023)
+
+**Infra as Code - Your wishes as a text file**
+
+Tässä esimerkissä luodaan tila moduuliin `hello`, joka varmistaa tiedoston `/tmp/infra-as-code` olemassaolon. Viimeisellä komennolla `sudo salt '*' state.apply hello` kutsutaan kaikkia orjakoneita ja käsketään niitä käyttämään kyseistä tilaa.
+<br></br>
+
+**top.sls - What Slave Runs What States**
+
+Tässä esimerkissä `top.sls`-tiedostoon lisättiin tieto, mitä tiloja tai moduuleja halutaan ajaa millekin orjalle. Esimerkissä ei määritelty erikseen orjaa, vaan siinä kutsutaan aina kaikkia. Määrittelemällä `top.sls`-tiedostoon mitkä tilat halutaan ajaa, käytäjän ei enää erikseen tarvitse listata tiloja, kun komentoa `sudo salt '*' state.apply` ajetaan.
+<br></br>
+
+### [Salt overview](https://docs.saltproject.io/salt/user-guide/en/latest/topics/overview.html#rules-of-yaml) (Salt project)
+
+**Rules of YAML**
+
+Salt-tiedostojen lukemiseen käytetään oletusarvoisesti YAML-renderöijää, joka muuttaa YAML-muotoisen tekstin Python-tietorakenteeksi Saltia varten. YAML-muotoisen tekstin luomiseen on olemassa tarkat säännöt, joista tärkeimmät alla:
+
+
+
+## a) Hello Vagrant!
+
+Näitä harjoituksia varten käytin Azuren pilvessä sijaitsevaa virtuaalikonetta, jossa pyörii viimeisin Debian 12 Bookworm.
+
+Vagrant oli jo asennettuna ennen tätä tehtävää, alla Vagrantin versio.
+
+<img width="306" alt="image" src="https://github.com/user-attachments/assets/b5b50812-33ff-42cf-9724-43f6e65e67e2">
+<br></br>
+
+## b) Linux Vagrant
+
+Tässä vaiheessa tehtävää aloin käymään läpi vaihtoehtoja tämän suorittamiseen, ja testasin niitä kaikkia:
+
+- VirtualBox M1 Macilla (arm64). Sain sen asennettua, mutta juutuin käynnistyksessä UEFI boot -näkymään, enkä päässyt mistään boottaamaan isoa.
+- Rasbperry Pi 4 ja 400, molemmat arm64-arkkitehtuurilla, eli täysin samat ongelmat vaikka toisessa olikin Debian 12 asennettuna.
+- Azuren pilvipalvelussa sijaitseva virtuaalikone. Tällä pääsin pisimmälle, ja sain vagrantin sekä virtualboxin asennettua, mutta seuraava virheilmoitus oli deal-breaker:
+
+
+  
+
 
 # Lähteet
 
@@ -42,3 +92,11 @@ Karvinen 2021: [Two Machine Virtual Network With Debian 11 Bullseye and Vagrant]
 Karvinen 2018: [Salt Quickstart – Salt Stack Master and Slave on Ubuntu Linux](https://terokarvinen.com/2018/salt-quickstart-salt-stack-master-and-slave-on-ubuntu-linux/?fromSearch=salt%20quickstart%20salt%20stack%20master%20and%20slave%20on%20ubuntu%20linux)
 
 Edellinen raporttini, jota käytin lähteenä yhteenvedossa Saltin asennuksesta (Suontaa, 2024): https://github.com/Claptrack/Palvelinten-hallinta/blob/main/h1.md#salt-quickstart--salt-stack-master-and-slave-on-ubuntu-linux-lähde
+
+Karvinen 2024: [Hello Salt Infra-as-Code](https://terokarvinen.com/2024/hello-salt-infra-as-code/)
+
+Karvinen 2023: [Salt Vagrant - automatically provision one master and two slaves](https://terokarvinen.com/2023/salt-vagrant/#infra-as-code---your-wishes-as-a-text-file)
+
+Salt project, Rules of YAML, YAML simple structure, Lists and dictionaries - YAML block structures: https://docs.saltproject.io/salt/user-guide/en/latest/topics/overview.html#rules-of-yaml
+
+
