--- a/h2.md
+++ b/h2.md
@@ -60,7 +60,7 @@ Tässä esimerkissä `top.sls`-tiedostoon lisättiin tieto, mitä tiloja tai mod
 
 Salt-tiedostojen lukemiseen käytetään oletusarvoisesti YAML-renderöijää, joka muuttaa YAML-muotoisen tekstin Python-tietorakenteeksi Saltia varten. YAML-muotoisen tekstin luomiseen on olemassa tarkat säännöt, joista tärkeimmät alla:
 
-
+**TÄYDENNETÄÄN MYÖHEMMIN**
 
 ## a) Hello Vagrant!
 
@@ -73,15 +73,19 @@ Vagrant oli jo asennettuna ennen tätä tehtävää, alla Vagrantin versio.
 
 ## b) Linux Vagrant
 
-Tässä vaiheessa tehtävää aloin käymään läpi vaihtoehtoja tämän suorittamiseen, ja testasin niitä kaikkia:
+Tässä vaiheessa tehtävää aloin käymään läpi vaihtoehtoja tämän suorittamiseen ja testasin niitä kaikkia:
 
 - VirtualBox M1 Macilla (arm64). Sain sen asennettua, mutta juutuin käynnistyksessä UEFI boot -näkymään, enkä päässyt mistään boottaamaan isoa.
 - Rasbperry Pi 4 ja 400, molemmat arm64-arkkitehtuurilla, eli täysin samat ongelmat vaikka toisessa olikin Debian 12 asennettuna.
 - Azuren pilvipalvelussa sijaitseva virtuaalikone. Tällä pääsin pisimmälle, ja sain vagrantin sekä virtualboxin asennettua, mutta seuraava virheilmoitus oli deal-breaker:
 
+<img width="715" alt="image" src="https://github.com/user-attachments/assets/47a67671-499a-4b0f-b1d6-422bb14c9a2b">
+<br></br>
 
+Muutaman stackexchange-keskustelun luettuani tulin siihen ymmärrykseen, että virtuaalikoneeni ei todennäköisesti tue virtualisointia ja se täytyy päivittää isompaan. Hinnat pyörivät yli 100 $/kk, joten kuoppasin tämän idean. Tero myös mainitsi vinkeissä, että virtualisointi toimii heikosti sisäkkäin, joten tämä saattoi olla kuolleena syntynyt idea. Toki olisi ollut mielenkiintoista nähdä, miten se olisi toiminut.
+
+Lopputulema: www.taitonetti.fi ja sieltä käytetty Lenovon ThinkPad T490 tilaukseen. Täydennän siis raporttia myöhemmin.
   
-
 
 # Lähteet
 
