--- a/h2.md
+++ b/h2.md
@@ -85,6 +85,12 @@ Tässä vaiheessa tehtävää aloin käymään läpi vaihtoehtoja tämän suorit
 Muutaman stackexchange-keskustelun luettuani tulin siihen ymmärrykseen, että virtuaalikoneeni ei todennäköisesti tue virtualisointia ja se täytyy päivittää isompaan. Hinnat pyörivät yli 100 $/kk, joten kuoppasin tämän idean. Tero myös mainitsi vinkeissä, että virtualisointi toimii heikosti sisäkkäin, joten tämä saattoi olla kuolleena syntynyt idea. Toki olisi ollut mielenkiintoista nähdä, miten se olisi toiminut.
 
 Lopputulema: www.taitonetti.fi ja sieltä käytetty Lenovon ThinkPad T490 tilaukseen. Täydennän siis raporttia myöhemmin.
+
+**Raporttia täydennetty 17.11.2024:**
+
+Nyt on Winukkaa ja Linukkaa. Hankin loppukurssia (ja muita oikeita tietskarikursseja) varten Lenovo L14 -läppärin (AMD Ryzen 5 PRO, 24 GB RAM, 256 GB SSD, Windows 10 Pro ja Debian 12 dual-bootilla).
+
+Vagrant ja VirtualBox
   
 
 # Lähteet
