--- a/h2.md
+++ b/h2.md
@@ -90,8 +90,24 @@ Lopputulema: www.taitonetti.fi ja sieltä käytetty Lenovon ThinkPad T490 tilauk
 
 Nyt on Winukkaa ja Linukkaa. Hankin loppukurssia (ja muita oikeita tietskarikursseja) varten Lenovo L14 -läppärin (AMD Ryzen 5 PRO, 24 GB RAM, 256 GB SSD, Windows 10 Pro ja Debian 12 dual-bootilla).
 
-Vagrant ja VirtualBox
-  
+Päätin jatkaa tehtävän suorittamista Debianilla, koska komennot ovat tutut. Vagrantin asennus meni helposti komennolla
+
+    sudo apt-get install vagrant
+
+![image](https://github.com/user-attachments/assets/26bdc0d2-9616-47d0-858e-f3a81745d69b)
+<br></br>
+
+Virtualboxin asennuksessa käytin seuraavaa [ohjetta](https://linuxiac.com/how-to-install-virtualbox-on-debian-12-bookworm/) apuna, koska Virtualbox ei ole saatavilla virallisista Debian-repoista.
+
+
+![image](https://github.com/user-attachments/assets/ee0a204f-4040-45cc-9a84-bb7c58493426)
+<br></br>
+
+![image](https://github.com/user-attachments/assets/3b3fe836-ef60-4005-afcd-bad5f4ebe9f6)
+<br></br>
+
+Jatkoin tästä seuraa
+
 
 # Lähteet
 
@@ -109,4 +125,5 @@ Karvinen 2023: [Salt Vagrant - automatically provision one master and two slaves
 
 Salt project, Rules of YAML, YAML simple structure, Lists and dictionaries - YAML block structures: https://docs.saltproject.io/salt/user-guide/en/latest/topics/overview.html#rules-of-yaml
 
+How to Install VirtualBox on Debian 12 (Bookworm): https://linuxiac.com/how-to-install-virtualbox-on-debian-12-bookworm/
 
