--- a/h2.md
+++ b/h2.md
@@ -106,7 +106,90 @@ Virtualboxin asennuksessa käytin seuraavaa [ohjetta](https://linuxiac.com/how-t
 ![image](https://github.com/user-attachments/assets/3b3fe836-ef60-4005-afcd-bad5f4ebe9f6)
 <br></br>
 
-Jatkoin tästä seuraa
+Tämän jälkeen loin kansion `testhost` ja loin sinne tiedoston `Vagrantfile`
+
+Kopioin konfiguraation Teron [ohjeesta](https://terokarvinen.com/2021/two-machine-virtual-network-with-debian-11-bullseye-and-vagrant/) pienin muutoksin. Tein tässä harjoituksessa vasta yhden virtuaalikoneen.
+
+![image](https://github.com/user-attachments/assets/ab0730fa-f97b-40ff-902b-c71729f1dc1c)
+<br></br>
+
+Tallensin tiedoston ja yritin ottaa yhteyden virtuaalikoneeseen
+
+    vagrant ssh t001
+
+Virtuaalikone ei kuitenkaan ollut vielä pystyssä
+
+![image](https://github.com/user-attachments/assets/cc9be276-e759-4779-9e6d-93486f5df0d8)
+<br></br>
+
+joten pystytin sen komennolla
+    
+    vagrant up
+
+Seuraava virheilmoitus viittasi siihen, että virtuaalikoneen toimittaja ei ole tiedossa ([lähde](https://stackoverflow.com/questions/55953554/unable-to-use-new-vagrant-install-error-while-connecting-to-libvirt))
+
+![image](https://github.com/user-attachments/assets/c33ba4bf-2ca2-490c-8fbe-79cfc24ee250)
+<br></br>
+
+Kokeilin uudelleen komennolla
+
+    vagrant up --provider virtualbox
+
+Uusi virheilmoitus viittasi siihen, että minulla oli versio virtualboxista, jota ei tueta. Joten poistin asennuksen ja asensin virtualbox-7.0 sen sijaan.
+
+    sudo apt-get remove virtualbox-7.1 && sudo apt-get update && sudo apt-get install virtualbox-7.0
+
+Tämän jälkeen pelkkä `vagrant up` toimi ja ainoana virheenä oli IP-osoite, joka ei ollut sallitussa osoiteavaruudessa. Vaihdoin osoitteeksi 192.168.56.2.
+
+Sain virtuaalikoneen pystyyn ja sain siihen etäyhteyden.
+
+![image](https://github.com/user-attachments/assets/4883d367-385a-4a91-afdd-0f071e8d35dd)
+<br></br>
+
+Sitten muistin, että virtuaalikoneen luomiseen löytyy helpompikin tapa, joka on mainittu mm. Teron tehtävänannon vinkeissä. Kokeilin vielä sitä.
+
+Poistin ensin vanhan virtuaalikoneen
+
+    vagrant destroy
+
+Tämän jälkeen loin uuden koneen sekä kirjauduin siihen komennoilla
+
+    vagrant init debian/bookworm64
+    vagrant up
+    vagrant ssh
+
+Testattu toimivaksi, joten tuhosin virtuaalikoneen
+
+    vagrant destroy
+
+![image](https://github.com/user-attachments/assets/5dc32fa7-dffe-4506-82c6-abef067d53f5)
+<br></br>
+
+## c) Kaksin kaunihimpi
+
+Tätä harjoitusta varten loin kansion `deuxhosts` ja pystytin sinne uuden virtuaalikoneen komennolla
+
+    vagrant init debian/bookworm64
+
+Tämän jälkeen lisäsin tiedostoon Teron [ohjeen](https://terokarvinen.com/2021/two-machine-virtual-network-with-debian-11-bullseye-and-vagrant/#vagrantfile) avulla kahden eri virtuaalikoneen tiedot
+
+![image](https://github.com/user-attachments/assets/e20b10c6-ba01-4658-8366-afd8e6e5cfd1)
+<br></br>
+
+jonka jälkeen komento `vagrant up` pystytti virtuaalikoneet. 
+
+![image](https://github.com/user-attachments/assets/b4bf2f8a-1dcf-45ad-922a-66182e3933de)
+<br></br>
+
+Kirjauduin ensin koneelle `t001`
+
+    vagrant ssh t001
+
+Tämän jälkeen pingasin toista konetta ja totesin, että yhteys toimii.
+
+![image](https://github.com/user-attachments/assets/dadf49fc-58fd-4913-abaa-5362f3f99984)
+<br></br>
+
 
 
 # Lähteet
@@ -127,3 +210,4 @@ Salt project, Rules of YAML, YAML simple structure, Lists and dictionaries - YAM
 
 How to Install VirtualBox on Debian 12 (Bookworm): https://linuxiac.com/how-to-install-virtualbox-on-debian-12-bookworm/
 
+Unable to use new Vagrant install - Error while connecting to libvirt, StackExchange: https://stackoverflow.com/questions/55953554/unable-to-use-new-vagrant-install-error-while-connecting-to-libvirt
